config/netpol-datascience.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: deny-pod2pod
  namespace: datascience
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      component: singleuser-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          deploymentconfig: jupyter
